[tool.poetry]
name = "unify-docs"
readme = "README.md"
version = "0.9.2"
description = "Documentation for the Unify API"
authors = ["Unify <hello@unify.com>"]
repository = "https://github.com/unifyai/unify-docs"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
openai = "^1.41.0"
anthropic = "^0.34.2"
ollama = "^0.3.3"
opencv-python = "^4.10.0.0"
unifyai = "^0.9.2"
pypdf = "^4.3.1"
jsonlines = "^4.0.0"
pdf2image = "1.17.0"
wget = "3.2"

[tool.poetry.group.dev.dependencies]
flake8 = "~4.0.1"
mypy = "^1.1.1"
isort = "^5.11.4"
pre-commit = "^3.0.1"
wemake-python-styleguide = "^0.17.0"
black = "^24.3.0"
autoflake = "^1.6.1"
pytest = "^8.0.0"
PyMuPDF = "^1.25.1"
types-requests = "*"

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["orchestra",]

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
